--- a/frontend/src/SearchBox.css
+++ b/frontend/src/SearchBox.css
@@ -1,3 +1,14 @@
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.centered-element {
+    flex: 1;
+    text-align: center;
+}
+
 img {
     width: 38px;
     height: 38px;
