--- a/frontend/src/SearchBox.css
+++ b/frontend/src/SearchBox.css
@@ -2,11 +2,16 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
 }
 
 .centered-element {
     flex: 1;
     text-align: center;
+}
+
+.right-element {
+    margin-top: 10px;
 }
 
 img {
